项目管理/v016/阶段2-最小需求规格.md
# 阶段 2 最小需求规格

> 状态：已实现，待本次模式修正的用户验收 | 日期：2026-07-16
>
> 本文档只规定阶段 2；与旧的长期规划冲突时，以本文档为准。

## 一、目标与边界

阶段 2 用一个 JSON 测试宏验证完整链路：按 F9 后，程序以 Windows SendInput 模拟现实键盘逐键点击，在当前窗口输出小写 `hello world`。它不使用 Unicode 文字注入。

本阶段只包含一个宏、一个可中断的 `SequencePlayer`、固定 F9/F12 和 `switch`、`down` 两种模式。没有 UI、编辑器、鼠标、窗口匹配、音效、Python 脚本、组合键、热键自定义、冲突检测或多宏并发。

安全底线保持不变：启动时禁用；F12 停止正在运行的宏；鼠标位于程序窗口内时不触发；关闭窗口时停止、释放按键并卸载热键。

## 二、唯一 JSON 格式

宏文件为一个 UTF-8 JSON 对象，字段必须全部存在，且不得有未知字段：

```json
{
  "name": "hello world",
  "mode": "down",
  "count": 1,
  "speed": 1.0,
  "steps": [
    {"type": "key_tap", "key": "h", "hold_ms": 20, "delay_ms": 50}
  ]
}
```

| 字段 | 规则 |
|---|---|
| `name` | 非空字符串；测试宏使用 `hello world`。 |
| `mode` | `switch` 或 `down`。 |
| `count` | 整数 `0–99`；默认 `1`。`0` 表示无限循环，其他值为最多完整轮数。 |
| `speed` | 数字 `0.01–8.0`；默认 `1.0`。实际步骤间隔为 `delay_ms / speed`。 |
| `steps` | 非空数组，仅允许 `key_tap`。 |
| `key_tap` | 严格含 `type`、`key`、`hold_ms`、`delay_ms`；`key` 必须是输入模拟器支持的单键。 |

`hold_ms` 是物理按下持续时间，不受速度倍率缩放；`delay_ms` 是释放后的间隔，受速度倍率缩放。需要大写或组合键时，后续宏格式必须显式描述 Shift 等物理按键操作；阶段 2 不实现该格式。

## 三、热键、执行与停止

- 唯一宏固定由 F9 触发，F12 固定为全局启用/禁用键；阶段 2 不允许通过 JSON 更改它们。
- `down`（按下执行，松开停止）：按下 F9 启动；`count=0` 时松开 F9 立即停止，`count=1–99` 时松开不打断，完整执行指定轮数后自然结束。
- `switch`：按下 F9 在开始与停止间切换；非零次数完成后自然结束。
- F12、窗口关闭和模式停止都走同一 `SequencePlayer.stop()` 路径。停止后不开始新步骤；若中断发生在按键保持期间，必须先发送对应释放事件。
- 同一时刻只允许该宏运行；重复启动请求必须拒绝并记录日志。

## 四、验收与后续需求

自动测试覆盖：合法/非法 JSON、顺序执行、速度换算、等待中断、异常释放、重复启动拒绝、两种模式状态机、窗口换行文本与 F12 全局 OSD。用户在记事本中验收：启动后为红色；F12 变绿色并显示“全局脚本已就绪”；轻按 F9 完整输出一次小写 `hello world`；将 `count` 改为 `0` 后，按住 F9 输出、松开停止。

后续 UI 阶段再做：F9/F12 自定义为任意按键、速度滑块及左右键调节（粗调 1.0、细调 0.1）、鼠标侧键和组合键支持。
